# phototag

./: .env.example  .gitignore  CLAUDE.md  LICENSE.md  Makefile  README.md  main.py  pyproject.toml  query.sql
phototag/: __init__.py  cli.py  dating.py  media.py
phototag/ai/: base.py  openai_service.py
phototag/models/: ai.py  tags.py
phototag/processing/: __init__.py  photo_processor.py  photo_processor_fixed.py
phototag/storage/: exif.py  immich.py  state_db.py  tag_review.py
